specification in Python interface.

- Fixed errors in the names of some analyzer bandwidth enhancement
configuration functions in the C interface. 

- Improved data type size specification in SdifFile.C -- can now
define symbols like SIZEOF_INT during build to specify the
sizes of 2- and 4- byte integer types (if not using the 
autotools, which do this automatically). 

-------------------------------------------------------
changes since 1.6 release:

- Improved behavior of cropping in Python and procedural interfaces
such that Partials left empty after cropping are removed from the
PartialList. 

- Corrected a logic error in Cropper that caused Breakpoints to be 
introduced into Partials that should be left empty by cropping (no 
Breakpoints in the cropping range).

- Added support for resampling according to a timing envelope
to the Resampler class. This allows time reversal and scrubbing 
effects, in addition to straightforware time dilation.

- Fixed a header inclusion error that prevented building with some
compilers.

-------------------------------------------------------
changes since 1.5.4 release:

- Corrected several sources of significant phase errors in 
synthesis, and in phase reporting from analysis data.

- Improved the Resampler implementation of Breakpoint time
quantization (previously called "sparse resampling"), no longer
adding extra Breakpoints unpredictably to lessen differences 
between the original and resampled envelopes. 

- Added capability to perform logarithmic frequency morphing --
log or linear morphing can be selected independently for both 
amplitude/bandwidth and frequency envelopes. (This might be 
especially useful if you are morphing two different pitches to
obtain a third pitch.)

- Cleaned up Filter interface and implementation, made it more
consistent with other common tools (like Matlab and scipy). 

- Added a Parameters struct to the Synthesizer class that can
be used to specify a full configuration of the Synthesizer. 
